# mvpbot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md
.cursor/skills/openrouter-setup/: SKILL.md  openrouter_llm.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_experiment.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/assistant_service/: __init__.py  config.py  db.py  demo_response.py  graph.py  logging_config.py  main.py  models.py  observability.py  openrouter_llm.py
backend/src/assistant_service/agents/: __init__.py  classifier.py  general_agent.py  math_agent.py
backend/tests/: conftest.py  test_api.py  test_classifier.py  test_graph.py  test_logfire.py  test_observability.py  test_phoenix.py
frontend/: .env.example  package.json
frontend/app/: assistant.tsx
frontend/components/assistant-ui/: reasoning.tsx  thread-list.tsx  thread.tsx  threadlist-sidebar.tsx  user-switcher.tsx
frontend/lib/: api.ts  device-id.ts  fastapi-remote-adapter.ts  fastapi-thread-runtime.tsx
